// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render device dashboard 1`] = `
.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c8:active {
  opacity: 0.56;
}

.c8:hover,
.c8:focus {
  background: #651FFF;
}

.c8:active {
  background: #354AA4;
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
}

.c18:active {
  opacity: 0.56;
}

.c18:hover,
.c18:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c18:active {
  opacity: 0.24;
}

.c18:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c16 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c1 {
  display: flex;
}

.c4 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
}

.c17 {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c5 {
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c7 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

.c13 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.c13 > thead > tr > th,
.c13 > tbody > tr > th,
.c13 > tfoot > tr > th,
.c13 > thead > tr > td,
.c13 > tbody > tr > td,
.c13 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c13 > thead > tr > th:first-child,
.c13 > tbody > tr > th:first-child,
.c13 > tfoot > tr > th:first-child,
.c13 > thead > tr > td:first-child,
.c13 > tbody > tr > td:first-child,
.c13 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c13 > thead > tr > th:last-child,
.c13 > tbody > tr > th:last-child,
.c13 > tfoot > tr > th:last-child,
.c13 > thead > tr > td:last-child,
.c13 > tbody > tr > td:last-child,
.c13 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c13 > tbody > tr > td {
  vertical-align: baseline;
}

.c13 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c13 > thead > tr > th .c15 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c13 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c13 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c13 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c9 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c12 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #2C3A73;
  border-radius: 200px;
}

.c10 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: #111B48;
}

.c11 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-right: 184px;
  color: rgba(255,255,255,0.87);
  background: #111B48;
  padding-left: 16px;
  padding-right: 16px;
}

.c11:hover,
.c11:focus,
.c11:active {
  background: #1C254D;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  color: rgba(255,255,255,0.87);
}

.c11::placeholder {
  color: rgba(255,255,255,0.24);
  font-size: 12px;
}

.c14 > tbody > tr td {
  vertical-align: middle;
  height: 32px;
}

<div
  class="c0 c1 c2"
  style="width: 904px; padding: 0px; overflow: hidden;"
>
  <div
    class="c3 c4 c5"
  >
    <div
      class="c6 c7"
    >
      Two-Factor Devices
    </div>
    <button
      class="c8"
      kind="primary"
      title=""
    >
      Add two-factor device
    </button>
  </div>
  <nav
    class="c9"
  >
    <div
      class="c10"
    >
      <input
        class="c11"
        placeholder="SEARCH..."
        value=""
      />
      <div
        class="c12"
      />
    </div>
  </nav>
  <table
    class="c13 c14"
    style="max-width: 100%;"
  >
    <thead>
      <tr>
        <th
          style="cursor: default;"
        >
          Type
        </th>
        <th
          style="cursor: default;"
        >
          Device Name
        </th>
        <th>
          <a>
            Registered
            <span
              class="c15 c16 icon icon-chevron-down "
              color="light"
              title="sort items desc"
            />
          </a>
        </th>
        <th>
          <a>
            Last Used
            <span
              class="c15 c16 icon icon-chevrons-expand-vertical "
              color="light"
              title="sort items"
            />
          </a>
        </th>
        <th
          style="cursor: default;"
        />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Authenticator App
        </td>
        <td
          title="iphone 12"
        >
          <div
            class="c17"
            style="max-width: 96px; white-space: nowrap;"
          >
            iphone 12
          </div>
        </td>
        <td>
          2021-08-12
        </td>
        <td>
          2021-08-12
        </td>
        <td
          align="right"
        >
          <button
            class="c18"
            kind="border"
            title=""
          >
            Remove
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Hardware Key
        </td>
        <td
          title="solokey"
        >
          <div
            class="c17"
            style="max-width: 96px; white-space: nowrap;"
          >
            solokey
          </div>
        </td>
        <td>
          2021-06-15
        </td>
        <td>
          2021-06-18
        </td>
        <td
          align="right"
        >
          <button
            class="c18"
            kind="border"
            title=""
          >
            Remove
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Hardware Key
        </td>
        <td
          title="backup yubikey"
        >
          <div
            class="c17"
            style="max-width: 96px; white-space: nowrap;"
          >
            backup yubikey
          </div>
        </td>
        <td>
          2021-04-18
        </td>
        <td>
          2021-07-16
        </td>
        <td
          align="right"
        >
          <button
            class="c18"
            kind="border"
            title=""
          >
            Remove
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Hardware Key
        </td>
        <td
          title="yubikey"
        >
          <div
            class="c17"
            style="max-width: 96px; white-space: nowrap;"
          >
            yubikey
          </div>
        </td>
        <td>
          2021-02-05
        </td>
        <td>
          2021-02-28
        </td>
        <td
          align="right"
        >
          <button
            class="c18"
            kind="border"
            title=""
          >
            Remove
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`render failed state for creating restricted privilege token 1`] = `
.c9 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
  margin-bottom: 16px;
}

.c9 a {
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c8:active {
  opacity: 0.56;
}

.c8:hover,
.c8:focus {
  background: #651FFF;
}

.c8:active {
  background: #354AA4;
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
}

.c19:active {
  opacity: 0.56;
}

.c19:hover,
.c19:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c19:active {
  opacity: 0.24;
}

.c19:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c17 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c1 {
  display: flex;
}

.c4 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
}

.c18 {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c5 {
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c7 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

.c14 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.c14 > thead > tr > th,
.c14 > tbody > tr > th,
.c14 > tfoot > tr > th,
.c14 > thead > tr > td,
.c14 > tbody > tr > td,
.c14 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c14 > thead > tr > th:first-child,
.c14 > tbody > tr > th:first-child,
.c14 > tfoot > tr > th:first-child,
.c14 > thead > tr > td:first-child,
.c14 > tbody > tr > td:first-child,
.c14 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c14 > thead > tr > th:last-child,
.c14 > tbody > tr > th:last-child,
.c14 > tfoot > tr > th:last-child,
.c14 > thead > tr > td:last-child,
.c14 > tbody > tr > td:last-child,
.c14 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c14 > tbody > tr > td {
  vertical-align: baseline;
}

.c14 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c14 > thead > tr > th .c16 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c14 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c14 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c14 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c10 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c13 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #2C3A73;
  border-radius: 200px;
}

.c11 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: #111B48;
}

.c12 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-right: 184px;
  color: rgba(255,255,255,0.87);
  background: #111B48;
  padding-left: 16px;
  padding-right: 16px;
}

.c12:hover,
.c12:focus,
.c12:active {
  background: #1C254D;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  color: rgba(255,255,255,0.87);
}

.c12::placeholder {
  color: rgba(255,255,255,0.24);
  font-size: 12px;
}

.c15 > tbody > tr td {
  vertical-align: middle;
  height: 32px;
}

<div
  class="c0 c1 c2"
  style="width: 904px; padding: 0px; overflow: hidden;"
>
  <div
    class="c3 c4 c5"
  >
    <div
      class="c6 c7"
    >
      Two-Factor Devices
    </div>
    <button
      class="c8"
      kind="primary"
      title=""
    >
      Add two-factor device
    </button>
  </div>
  <div
    class="c9"
    kind="danger"
  >
    failed to create privilege token
  </div>
  <nav
    class="c10"
  >
    <div
      class="c11"
    >
      <input
        class="c12"
        placeholder="SEARCH..."
        value=""
      />
      <div
        class="c13"
      />
    </div>
  </nav>
  <table
    class="c14 c15"
    style="max-width: 100%;"
  >
    <thead>
      <tr>
        <th
          style="cursor: default;"
        >
          Type
        </th>
        <th
          style="cursor: default;"
        >
          Device Name
        </th>
        <th>
          <a>
            Registered
            <span
              class="c16 c17 icon icon-chevron-down "
              color="light"
              title="sort items desc"
            />
          </a>
        </th>
        <th>
          <a>
            Last Used
            <span
              class="c16 c17 icon icon-chevrons-expand-vertical "
              color="light"
              title="sort items"
            />
          </a>
        </th>
        <th
          style="cursor: default;"
        />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Authenticator App
        </td>
        <td
          title="iphone 12"
        >
          <div
            class="c18"
            style="max-width: 96px; white-space: nowrap;"
          >
            iphone 12
          </div>
        </td>
        <td>
          2021-08-12
        </td>
        <td>
          2021-08-12
        </td>
        <td
          align="right"
        >
          <button
            class="c19"
            kind="border"
            title=""
          >
            Remove
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Hardware Key
        </td>
        <td
          title="solokey"
        >
          <div
            class="c18"
            style="max-width: 96px; white-space: nowrap;"
          >
            solokey
          </div>
        </td>
        <td>
          2021-06-15
        </td>
        <td>
          2021-06-18
        </td>
        <td
          align="right"
        >
          <button
            class="c19"
            kind="border"
            title=""
          >
            Remove
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Hardware Key
        </td>
        <td
          title="backup yubikey"
        >
          <div
            class="c18"
            style="max-width: 96px; white-space: nowrap;"
          >
            backup yubikey
          </div>
        </td>
        <td>
          2021-04-18
        </td>
        <td>
          2021-07-16
        </td>
        <td
          align="right"
        >
          <button
            class="c19"
            kind="border"
            title=""
          >
            Remove
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Hardware Key
        </td>
        <td
          title="yubikey"
        >
          <div
            class="c18"
            style="max-width: 96px; white-space: nowrap;"
          >
            yubikey
          </div>
        </td>
        <td>
          2021-02-05
        </td>
        <td>
          2021-02-28
        </td>
        <td
          align="right"
        >
          <button
            class="c19"
            kind="border"
            title=""
          >
            Remove
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`render failed state for fetching devices 1`] = `
.c9 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
  margin-bottom: 16px;
}

.c9 a {
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c8:active {
  opacity: 0.56;
}

.c8:hover,
.c8:focus {
  background: #651FFF;
}

.c8:active {
  background: #354AA4;
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c1 {
  display: flex;
}

.c4 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
}

.c5 {
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c7 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

<div
  class="c0 c1 c2"
  style="width: 904px; padding: 0px; overflow: hidden;"
>
  <div
    class="c3 c4 c5"
  >
    <div
      class="c6 c7"
    >
      Two-Factor Devices
    </div>
    <button
      class="c8"
      kind="primary"
      title=""
    >
      Add two-factor device
    </button>
  </div>
  <div
    class="c9"
    kind="danger"
  >
    failed to fetch devices
  </div>
</div>
`;
